<resources>
    <string name="app_name">RegistroFMAT</string>

    <string name="lblPassword">Contraseña:</string>
    <string name="lblUser">Matrícula:</string>

    <string name="btn_submit">Aceptar</string>

    <string name="btn_register">Registrar</string>

    <string name="lblMAC">MAC de tu Dispositivo:</string>

    <string name="lblDevice1">MAC de tu 1er Dispositivo:</string>
    <string name="lblDevice2">MAC de tu 2ndo Dispositivo:</string>

    <string name="lblUnlist">Eliminar del registro</string>

    <string name="lblToUnlist">Eliminar un Dispositivo</string>

</resources>
