<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DeviceRegisteryForm">

    <TextView
        android:id="@+id/lblUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="username"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/lblUserEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Email"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@+id/lblUserName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/lblMAC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblMAC"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginTop="60dp"
        android:layout_below="@+id/lblUserEmail"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/fieldMAC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/lblMAC"
        android:layout_alignParentLeft="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_register"
        android:id="@+id/btnSubmitMAC"
        android:layout_below="@+id/fieldMAC"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblToUnlist"
        android:id="@+id/ToUnlistDevicebutton"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/fieldMAC"
        android:layout_alignEnd="@+id/fieldMAC" />

</RelativeLayout>
